Correct title alignment with buttons

--- a/app/javascript/app/components/country-ndc-overview/country-ndc-overview-styles.scss
+++ b/app/javascript/app/components/country-ndc-overview/country-ndc-overview-styles.scss
@@ -24,6 +24,7 @@
   @include msGridColumns(1fr, 20fr, 32fr);
 
   grid-template-columns: 1fr 20fr 32fr;
+  margin-top: -6px;
 }
 
 .infoBtn {
